Add statistical analysis and visualizations for UEFA Champions League dataset

--- a/material-didactico/bloque-1/semana-1/introduccion-exploracion.ipynb
+++ b/material-didactico/bloque-1/semana-1/introduccion-exploracion.ipynb
@@ -294,6 +294,19 @@
       "1           0           2               56               41  \n",
       "2           1           0               37               29  \n",
       "3           0           0               43               40  \n",
+      "4           2           1               74               62  \n",
+      "    season           stage        date      home_team          away_team  \\\n",
+      "0  2022-23  Quarter-finals  2022-08-21        Chelsea    Manchester City   \n",
+      "1  2020-21     Group Stage  2022-12-26       Juventus      Bayern Munich   \n",
+      "2  2022-23  Quarter-finals  2022-12-23      Barcelona  Borussia Dortmund   \n",
+      "3  2020-21     Semi-finals  2022-02-26  Bayern Munich           Juventus   \n",
+      "4  2021-22     Group Stage  2022-04-18      Liverpool        Real Madrid   \n",
+      "\n",
+      "   home_goals  away_goals  home_possession  away_possession  \n",
+      "0           3           0               70               26  \n",
+      "1           0           2               56               41  \n",
+      "2           1           0               37               29  \n",
+      "3           0           0               43               40  \n",
       "4           2           1               74               62  \n"
      ]
     }
@@ -343,10 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "901aa499",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Descripción estadística de variables numéricas:\n",
+      "       home_goals  away_goals  home_possession  away_possession\n",
+      "count  200.000000  200.000000       200.000000       200.000000\n",
+      "mean     1.420000    1.215000        54.785000        45.000000\n",
+      "std      1.204514    1.115796        11.723737        11.722932\n",
+      "min      0.000000    0.000000        35.000000        26.000000\n",
+      "25%      1.000000    0.000000        44.000000        34.000000\n",
+      "50%      1.000000    1.000000        54.500000        45.000000\n",
+      "75%      2.000000    2.000000        65.000000        55.000000\n",
+      "max      5.000000    5.000000        74.000000        65.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Descripción estadística básica\n",
     "print(\"📊 Descripción estadística de variables numéricas:\")\n",
@@ -365,10 +395,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "27af3182",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏆 Temporadas disponibles:\n",
+      "season\n",
+      "2022-23    72\n",
+      "2020-21    72\n",
+      "2021-22    56\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "⚽ Fases del torneo:\n",
+      "stage\n",
+      "Semi-finals       45\n",
+      "Quarter-finals    42\n",
+      "Round of 16       41\n",
+      "Group Stage       39\n",
+      "Final             33\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "🏟️ Equipos más frecuentes como locales:\n",
+      "home_team\n",
+      "Chelsea                25\n",
+      "Liverpool              22\n",
+      "Paris Saint-Germain    17\n",
+      "Juventus               17\n",
+      "Arsenal                17\n",
+      "Manchester United      16\n",
+      "Atletico Madrid        15\n",
+      "Barcelona              15\n",
+      "Real Madrid            15\n",
+      "Borussia Dortmund      15\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Análisis de las columnas categóricas\n",
     "print(\"🏆 Temporadas disponibles:\")\n",
@@ -383,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a597a991",
    "metadata": {},
    "outputs": [
@@ -426,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9c8d8d72",
    "metadata": {},
    "outputs": [
@@ -494,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ada8b962",
    "metadata": {},
    "outputs": [
@@ -544,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "369045ae",
    "metadata": {},
    "outputs": [
@@ -557,11 +623,11 @@
       "\n",
       "🏆 Top 5 equipos por diferencia de goles:\n",
       "              equipo  partidos  goles_favor  goles_contra  diferencia_goles\n",
-      "1    Atletico Madrid        28           44            32                12\n",
-      "3          Liverpool        37           58            50                 8\n",
-      "9            Arsenal        34           39            32                 7\n",
-      "5            Chelsea        49           68            63                 5\n",
-      "8  Borussia Dortmund        28           39            36                 3\n"
+      "9    Atletico Madrid        28           44            32                12\n",
+      "2          Liverpool        37           58            50                 8\n",
+      "6            Arsenal        34           39            32                 7\n",
+      "7            Chelsea        49           68            63                 5\n",
+      "3  Borussia Dortmund        28           39            36                 3\n"
      ]
     }
    ],
@@ -612,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "d81c2710",
    "metadata": {},
    "outputs": [
@@ -686,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "2e92e42d",
    "metadata": {},
    "outputs": [
@@ -717,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f83311ed",
    "metadata": {},
    "outputs": [
@@ -757,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "a1f747f5",
    "metadata": {},
    "outputs": [
