Adds descriptive statistics notebook
Adds a new notebook for descriptive statistics, including environment setup, data loading, and dataset simulation.

The notebook covers:
- Importing necessary libraries (pandas, numpy, matplotlib, seaborn, scipy)
- Configuring the environment for data analysis and visualization
- Creating a simulated football player dataset for practicing descriptive statistics

--- a/material-didactico/bloque-1/semana-3/estadistica-descriptiva.ipynb
+++ b/material-didactico/bloque-1/semana-3/estadistica-descriptiva.ipynb
@@ -93,6 +93,242 @@
     "\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76ebe4d1",
+   "metadata": {},
+   "source": [
+    "## 2. Configuración del Entorno y Carga de Datos\n",
+    "\n",
+    "### Importación de Librerías\n",
+    "\n",
+    "Para realizar análisis estadístico descriptivo, necesitamos las siguientes librerías:\n",
+    "\n",
+    "- **pandas**: Para manipulación y análisis de datos\n",
+    "- **numpy**: Para cálculos numéricos y estadísticos\n",
+    "- **matplotlib**: Para visualizaciones básicas\n",
+    "- **seaborn**: Para visualizaciones estadísticas avanzadas\n",
+    "- **scipy**: Para funciones estadísticas adicionales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2fa78590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Librerías importadas exitosamente\n",
+      "📊 Pandas versión: 2.3.1\n",
+      "🔢 NumPy versión: 2.2.6\n",
+      "📈 Matplotlib versión: 3.10.3\n",
+      "🎨 Seaborn versión: 0.13.2\n",
+      "📊 SciPy versión: 1.15.3\n",
+      "\n",
+      "🔧 Configuración aplicada:\n",
+      "- Estilo de visualización: seaborn\n",
+      "- Tamaño de figura por defecto: 12x8\n",
+      "- Paleta de colores: husl\n",
+      "- Advertencias suprimidas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importar librerías esenciales\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "import scipy\n",
+    "from datetime import datetime, timedelta\n",
+    "import warnings\n",
+    "\n",
+    "# Configurar warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Configurar visualización\n",
+    "plt.style.use('seaborn-v0_8')\n",
+    "sns.set_palette(\"husl\")\n",
+    "plt.rcParams['figure.figsize'] = (12, 8)\n",
+    "plt.rcParams['font.size'] = 12\n",
+    "\n",
+    "# Configurar pandas para mostrar más columnas\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.width', None)\n",
+    "pd.set_option('display.max_colwidth', 50)\n",
+    "\n",
+    "# Verificar versiones\n",
+    "print(\"✅ Librerías importadas exitosamente\")\n",
+    "print(f\"📊 Pandas versión: {pd.__version__}\")\n",
+    "print(f\"🔢 NumPy versión: {np.__version__}\")\n",
+    "print(f\"📈 Matplotlib versión: {plt.matplotlib.__version__}\")\n",
+    "print(f\"🎨 Seaborn versión: {sns.__version__}\")\n",
+    "print(f\"📊 SciPy versión: {scipy.__version__}\")\n",
+    "\n",
+    "print(\"\\n🔧 Configuración aplicada:\")\n",
+    "print(\"- Estilo de visualización: seaborn\")\n",
+    "print(\"- Tamaño de figura por defecto: 12x8\")\n",
+    "print(\"- Paleta de colores: husl\")\n",
+    "print(\"- Advertencias suprimidas\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dfa73de",
+   "metadata": {},
+   "source": [
+    "## 3. Carga de Datos Futbolísticos\n",
+    "\n",
+    "Para practicar estadística descriptiva, crearemos un dataset simulado que represente estadísticas de jugadores de fútbol durante una temporada. Este dataset incluirá variables como:\n",
+    "\n",
+    "- **Goles**: Número de goles anotados por jugador\n",
+    "- **Asistencias**: Número de asistencias realizadas\n",
+    "- **Minutos jugados**: Total de minutos en cancha\n",
+    "- **Partidos jugados**: Número de partidos disputados\n",
+    "- **Posición**: Posición del jugador en el campo\n",
+    "- **Edad**: Edad del jugador\n",
+    "- **Valor de mercado**: Valor estimado del jugador (en millones)\n",
+    "\n",
+    "### 3.1 Creación del Dataset Simulado\n",
+    "\n",
+    "Crearemos un dataset con 100 jugadores ficticios que nos permita explorar diferentes aspectos de la estadística descriptiva aplicada al fútbol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7e5512f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== INFORMACIÓN DEL DATASET ===\n",
+      "Número total de jugadores: 100\n",
+      "Columnas disponibles: ['Nombre', 'Posicion', 'Edad', 'Partidos', 'Minutos', 'Goles', 'Asistencias', 'Valor_Mercado']\n",
+      "Tipos de datos:\n",
+      "Nombre            object\n",
+      "Posicion          object\n",
+      "Edad               int64\n",
+      "Partidos           int64\n",
+      "Minutos            int64\n",
+      "Goles              int64\n",
+      "Asistencias        int64\n",
+      "Valor_Mercado    float64\n",
+      "dtype: object\n",
+      "\n",
+      "=== PRIMERAS 5 FILAS ===\n",
+      "        Nombre       Posicion  Edad  Partidos  Minutos  Goles  Asistencias  \\\n",
+      "0  Jugador_001  Mediocampista    21        23     1756      3            4   \n",
+      "1  Jugador_002       Defensor    26        32     1966      2            3   \n",
+      "2  Jugador_003       Defensor    24        29     2012      3            2   \n",
+      "3  Jugador_004      Delantero    25         8      622     10            8   \n",
+      "4  Jugador_005      Delantero    21        22      843     12            4   \n",
+      "\n",
+      "   Valor_Mercado  \n",
+      "0           13.0  \n",
+      "1           14.7  \n",
+      "2           12.0  \n",
+      "3           13.0  \n",
+      "4           10.2  \n",
+      "\n",
+      "=== DISTRIBUCIÓN POR POSICIÓN ===\n",
+      "Posicion\n",
+      "Delantero        38\n",
+      "Mediocampista    33\n",
+      "Defensor         23\n",
+      "Portero           6\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear dataset simulado de jugadores de fútbol\n",
+    "np.random.seed(42)  # Para reproducibilidad\n",
+    "\n",
+    "# Definir posiciones y sus características típicas\n",
+    "posiciones = ['Delantero', 'Mediocampista', 'Defensor', 'Portero']\n",
+    "pesos_posiciones = [0.25, 0.35, 0.30, 0.10]  # Distribución típica en un equipo\n",
+    "\n",
+    "# Generar datos base\n",
+    "n_jugadores = 100\n",
+    "jugadores_data = []\n",
+    "\n",
+    "for i in range(n_jugadores):\n",
+    "    # Seleccionar posición\n",
+    "    posicion = np.random.choice(posiciones, p=pesos_posiciones)\n",
+    "    \n",
+    "    # Generar edad (18-35 años, con mayor concentración en 20-30)\n",
+    "    edad = int(np.random.normal(26, 4))\n",
+    "    edad = max(18, min(35, edad))\n",
+    "    \n",
+    "    # Generar partidos jugados (0-38 en una temporada típica)\n",
+    "    partidos = np.random.randint(5, 39)\n",
+    "    \n",
+    "    # Generar minutos jugados (depende de partidos y posición)\n",
+    "    if posicion == 'Portero':\n",
+    "        minutos_por_partido = np.random.normal(85, 10)\n",
+    "    else:\n",
+    "        minutos_por_partido = np.random.normal(70, 20)\n",
+    "    \n",
+    "    minutos_totales = int(max(0, partidos * minutos_por_partido))\n",
+    "    \n",
+    "    # Generar goles (depende de la posición)\n",
+    "    if posicion == 'Delantero':\n",
+    "        goles = np.random.poisson(12)\n",
+    "    elif posicion == 'Mediocampista':\n",
+    "        goles = np.random.poisson(5)\n",
+    "    elif posicion == 'Defensor':\n",
+    "        goles = np.random.poisson(2)\n",
+    "    else:  # Portero\n",
+    "        goles = np.random.poisson(0.1)\n",
+    "    \n",
+    "    # Generar asistencias (depende de la posición)\n",
+    "    if posicion == 'Delantero':\n",
+    "        asistencias = np.random.poisson(4)\n",
+    "    elif posicion == 'Mediocampista':\n",
+    "        asistencias = np.random.poisson(8)\n",
+    "    elif posicion == 'Defensor':\n",
+    "        asistencias = np.random.poisson(2)\n",
+    "    else:  # Portero\n",
+    "        asistencias = np.random.poisson(0.1)\n",
+    "    \n",
+    "    # Generar valor de mercado (en millones, depende de edad, goles, asistencias)\n",
+    "    valor_base = 5 + (goles * 0.5) + (asistencias * 0.3) + (partidos * 0.1)\n",
+    "    factor_edad = 1.2 if 22 <= edad <= 28 else 0.8 if edad > 30 else 1.0\n",
+    "    valor_mercado = round(valor_base * factor_edad * np.random.uniform(0.7, 1.3), 1)\n",
+    "    \n",
+    "    jugadores_data.append({\n",
+    "        'Nombre': f'Jugador_{i+1:03d}',\n",
+    "        'Posicion': posicion,\n",
+    "        'Edad': edad,\n",
+    "        'Partidos': partidos,\n",
+    "        'Minutos': minutos_totales,\n",
+    "        'Goles': goles,\n",
+    "        'Asistencias': asistencias,\n",
+    "        'Valor_Mercado': valor_mercado\n",
+    "    })\n",
+    "\n",
+    "# Crear DataFrame\n",
+    "df_jugadores = pd.DataFrame(jugadores_data)\n",
+    "\n",
+    "# Mostrar información básica del dataset\n",
+    "print(\"=== INFORMACIÓN DEL DATASET ===\")\n",
+    "print(f\"Número total de jugadores: {len(df_jugadores)}\")\n",
+    "print(f\"Columnas disponibles: {list(df_jugadores.columns)}\")\n",
+    "print(f\"Tipos de datos:\")\n",
+    "print(df_jugadores.dtypes)\n",
+    "print(\"\\n=== PRIMERAS 5 FILAS ===\")\n",
+    "print(df_jugadores.head())\n",
+    "print(\"\\n=== DISTRIBUCIÓN POR POSICIÓN ===\")\n",
+    "print(df_jugadores['Posicion'].value_counts())"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +338,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
