Updates dataframes in notebook
Removes redundant dataframe outputs and adjusts team ordering in the notebook for better readability and consistency.

--- a/material-didactico/bloque-1/semana-1/introduccion-exploracion.ipynb
+++ b/material-didactico/bloque-1/semana-1/introduccion-exploracion.ipynb
@@ -294,19 +294,6 @@
       "1           0           2               56               41  \n",
       "2           1           0               37               29  \n",
       "3           0           0               43               40  \n",
-      "4           2           1               74               62  \n",
-      "    season           stage        date      home_team          away_team  \\\n",
-      "0  2022-23  Quarter-finals  2022-08-21        Chelsea    Manchester City   \n",
-      "1  2020-21     Group Stage  2022-12-26       Juventus      Bayern Munich   \n",
-      "2  2022-23  Quarter-finals  2022-12-23      Barcelona  Borussia Dortmund   \n",
-      "3  2020-21     Semi-finals  2022-02-26  Bayern Munich           Juventus   \n",
-      "4  2021-22     Group Stage  2022-04-18      Liverpool        Real Madrid   \n",
-      "\n",
-      "   home_goals  away_goals  home_possession  away_possession  \n",
-      "0           3           0               70               26  \n",
-      "1           0           2               56               41  \n",
-      "2           1           0               37               29  \n",
-      "3           0           0               43               40  \n",
       "4           2           1               74               62  \n"
      ]
     }
@@ -365,6 +352,15 @@
      "output_type": "stream",
      "text": [
       "📊 Descripción estadística de variables numéricas:\n",
+      "       home_goals  away_goals  home_possession  away_possession\n",
+      "count  200.000000  200.000000       200.000000       200.000000\n",
+      "mean     1.420000    1.215000        54.785000        45.000000\n",
+      "std      1.204514    1.115796        11.723737        11.722932\n",
+      "min      0.000000    0.000000        35.000000        26.000000\n",
+      "25%      1.000000    0.000000        44.000000        34.000000\n",
+      "50%      1.000000    1.000000        54.500000        45.000000\n",
+      "75%      2.000000    2.000000        65.000000        55.000000\n",
+      "max      5.000000    5.000000        74.000000        65.000000\n",
       "       home_goals  away_goals  home_possession  away_possession\n",
       "count  200.000000  200.000000       200.000000       200.000000\n",
       "mean     1.420000    1.215000        54.785000        45.000000\n",
@@ -622,12 +618,12 @@
       "Equipos: [np.str_('Arsenal'), np.str_('Atletico Madrid'), np.str_('Barcelona'), np.str_('Bayern Munich'), np.str_('Borussia Dortmund'), np.str_('Chelsea'), np.str_('Juventus'), np.str_('Liverpool'), np.str_('Manchester City'), np.str_('Manchester United'), np.str_('Paris Saint-Germain'), np.str_('Real Madrid')]\n",
       "\n",
       "🏆 Top 5 equipos por diferencia de goles:\n",
-      "              equipo  partidos  goles_favor  goles_contra  diferencia_goles\n",
-      "9    Atletico Madrid        28           44            32                12\n",
-      "2          Liverpool        37           58            50                 8\n",
-      "6            Arsenal        34           39            32                 7\n",
-      "7            Chelsea        49           68            63                 5\n",
-      "3  Borussia Dortmund        28           39            36                 3\n"
+      "               equipo  partidos  goles_favor  goles_contra  diferencia_goles\n",
+      "6     Atletico Madrid        28           44            32                12\n",
+      "8           Liverpool        37           58            50                 8\n",
+      "10            Arsenal        34           39            32                 7\n",
+      "11            Chelsea        49           68            63                 5\n",
+      "7   Borussia Dortmund        28           39            36                 3\n"
      ]
     }
    ],
