Updates set output order in notebook
Ensures consistent output order for set elements in the notebook.

--- a/material-didactico/bloque-0/semana-2/estructuras-control.ipynb
+++ b/material-didactico/bloque-0/semana-2/estructuras-control.ipynb
@@ -761,15 +761,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goleadores Barcelona: {'Griezmann', 'Messi', 'Neymar', 'Suarez'}\n",
-      "Goleadores Real Madrid: {'Ronaldo', 'Benzema', 'Bale', 'Modric'}\n",
-      "Goleadores Champions: {'Ronaldo', 'Messi', 'Benzema', 'Lewandowski'}\n",
+      "Goleadores Barcelona: {'Suarez', 'Messi', 'Neymar', 'Griezmann'}\n",
+      "Goleadores Real Madrid: {'Modric', 'Benzema', 'Bale', 'Ronaldo'}\n",
+      "Goleadores Champions: {'Messi', 'Lewandowski', 'Benzema', 'Ronaldo'}\n",
       "\n",
       "=== OPERACIONES CON CONJUNTOS ===\n",
-      "Todos los goleadores: {'Ronaldo', 'Neymar', 'Griezmann', 'Benzema', 'Bale', 'Modric', 'Messi', 'Suarez'}\n",
+      "Todos los goleadores: {'Modric', 'Messi', 'Bale', 'Suarez', 'Ronaldo', 'Griezmann', 'Neymar', 'Benzema'}\n",
       "Goleadores en ambos equipos: set()\n",
       "Solo goleadores del Barcelona: {'Suarez', 'Messi', 'Neymar', 'Griezmann'}\n",
-      "Goleadores no comunes: {'Ronaldo', 'Neymar', 'Griezmann', 'Bale', 'Modric', 'Messi', 'Benzema', 'Suarez'}\n",
+      "Goleadores no comunes: {'Modric', 'Messi', 'Bale', 'Suarez', 'Ronaldo', 'Griezmann', 'Neymar', 'Benzema'}\n",
       "\n",
       "=== VERIFICACIONES ===\n",
       "¿Messi ha marcado para el Barcelona? True\n",
